--- a/styles.css
+++ b/styles.css
@@ -22,21 +22,26 @@ a:hover {
   background-color: rgba(255,255,255,1.0);
 }
 .img-rounded {
-    box-shadow: 0 1px 3px rgba(0,0,0,.5);
+    box-shadow: 0 5px 5px rgba(0,0,0,.5);
+    width: 200px;
+    height: auto;
 }
 #picture_col {
   display: inline-block;
   width: 200px;
-  vertical-align: top;
+  vertical-align: center;
   padding-top: 24px;
 }
 #text_col {
   display: inline-block;
-  vertical-align: top;
-  text-align: left;
+  vertical-align: center;
+  text-align: center;
 }
 #text_col h1 {
   font-size: 36px;
+  color:#ffdd99;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  align-self: auto;
 }
 #text_col h2 {
   font-size: 23px;
@@ -53,9 +58,9 @@ a:hover {
 html,
 body {
   height: 100%;
-  background:#DAF7A6;
+  background:#ffdd99 ;
   background-repeat: repeat;
-  background-size: cover;
+
   background-position: center;
 }
 body {
@@ -73,6 +78,7 @@ body {
   min-height: 100%;
   -webkit-box-shadow: inset 0 0 100px rgba(0,0,0,.5);
           box-shadow: inset 0 0 100px rgba(0,0,0,.5);
+    background-color: #bf4040;
 }
 .site-wrapper-inner {
   display: table-cell;
@@ -110,11 +116,11 @@ body {
   font-weight: bold;
   color: #fff; /* IE8 proofing */
   color: rgba(255,255,255,.75);
-  border-bottom: 2px solid transparent;
+  border-bottom: 2px solid;
 }
 .masthead-nav > li > a:hover,
 .masthead-nav > li > a:focus {
-  background-color: transparent;
+  background-color: olive;
   border-bottom-color: #a9a9a9;
   border-bottom-color: rgba(255,255,255,.25);
 }
@@ -135,18 +141,6 @@ body {
 }
 
 
-/*
- * Cover
- */
-
-.cover {
-  padding: 0 20px;
-}
-/*.cover .btn-lg {
-  padding: 10px 20px;
-  font-weight: bold;
-}*/
-
 
 /*
  * Footer
@@ -155,6 +149,7 @@ body {
 .mastfoot {
   color: #999; /* IE8 proofing */
   color: rgba(255,255,255,.5);
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 
